--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
 		"build": "next build"
 	},
 	"dependencies": {
-		"next": "^15.1.7",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"@cloudscape-design/components": "^3.0.912",
+		"@cloudscape-design/global-styles": "^1.0.37",
+		"next": "^15.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "^22.13.4",
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
-		"typescript": "^5.7.3"
+		"@types/node": "^22.13.8",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
+		"typescript": "^5.8.2"
 	}
 }
