--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbo",
-		"build": "next build"
+		"build": "next build",
+		"clean": "rm -r out .next"
 	},
 	"dependencies": {
 		"@cloudscape-design/components": "^3.0.912",
